# sipphone

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/3rdlib/: CMakeLists.txt
src/3rdlib/include/bluetooth/: btkit_api.h
src/3rdlib/include/dl/: dl.h  durl.h  durl_tool.h
src/3rdlib/include/dsplink/: dsplink_api.h
src/3rdlib/include/hotplugdev/: camera_api.h  vcsport.h
src/3rdlib/include/hpdev/: hpdev_api.h
src/3rdlib/include/http/: appsocket.h  common.h  curl_base64.h  distinctive-ringer.h  dnscache_inc.h  error.h  ftp.h  http.h  http_digest.h  https.h  https_utils.h  module.h  mprintf.h  rawstr.h  strtok.h  tftp.h  urldata.h  windirent.h
src/3rdlib/include/json/: cjson.h
src/3rdlib/include/keypad/: keypad_api.h
src/3rdlib/include/ldap/: ldapsearch.h  yealink_ldap.h
src/3rdlib/json/: CMakeLists.txt  cJSON.c
src/3rdlib/lib/armv6jel/: libfreetype.so.6
src/3rdlib/lib/win32/: libautopservice.lib  libcfgservice.lib  libdl.lib  libeay32.lib  libmsgkit.lib  libservice.lib  libsysservice.lib  ssleay32.lib
src/3rdlib/memory/: CMakeLists.txt  memcheck.cpp  memcheck.h  memory.cpp  memory.h
src/3rdlib/testability/: CMakeLists.txt  modtestability.cpp  modtestability.h
src/baselibs/: .gitlab-ci.yml  README.md
src/baselibs/include/ETLLib/: ETL.h  ETLFile.h  ETLLib.h  ETLLib.hpp  ETLMsgSystem.h  ETLRegistry.h  ETLSocket.h  ETLTrace.h  _chAlloc.h  _chArray.h  _chBaseClass.h  _chChain.h  _chDeclare.h  _chDefine.h  _chList.h  _chMap.h  _chMisc.h  _chString.h  aestable.h  base64.h  encryption.h  librelevance.h  rc4k.h  sub-class.h  sub-interface.h
src/baselibs/include/commonapi/: common_api_enumtypes.h  stringhelperapi.h  systemhelperapi.h
src/baselibs/include/configparser/: modconfigparser.h
src/baselibs/include/configserver/: configserverinc.h
src/baselibs/include/devicelib/: keypad_drv.h  networkserver.h  phonedevice.h
src/baselibs/include/dsklog/: dsklog.h  log.h
src/baselibs/include/dskthread/: dskthreaddefine.h  mkthread.h  moddskthread.h  msgobject.h
src/baselibs/include/etlmsghandler/: impfunctor.h  modetlmsghandler.h  msgsubscriber.h
src/baselibs/include/msgkit/: mkconfig.h  mkhelper.h  mklist.h  mkmessage.h  mkservice.h
src/baselibs/include/regexp/: modregexp.h
src/baselibs/include/resource/: modresource.h  resourcedata.h
src/baselibs/include/taskaction/: common.h  modtaskaction.h  taskaction.h  taskactioncallbackbase.h
src/baselibs/include/translate/: modtrans.h
src/baselibs/include/xmlparser/: pugiconfig.hpp  pugixml.hpp  xmlparser.h  xmlparser.hpp
src/baselibs/include/ylstl/: memoryblock.h  stable_sort.hpp  string_like.h  utility.hpp  ylalgorithm.h  ylhashmap.h  yllist.h  ylmove.h  ylrandomiterator.h  ylsmartptr.h  ylstring.h  ylstringalgorithm.h  ylvector.h
src/baselibs/scripts/: create_MR.sh  svn_push.sh
src/dskphone/: CMakeLists.txt  qtbuild.cmake
src/dskphone/extension/: CMakeLists.txt  service_dsk_interface_extension.cpp
src/dskphone/logic/: CMakeLists.txt
src/dskphone/logic/account/: CMakeLists.txt
src/dskphone/logic/adapterbox/: CMakeLists.txt
src/dskphone/logic/application/: CMakeLists.txt
src/dskphone/logic/autopcontrol/: CMakeLists.txt
src/dskphone/logic/blf/: CMakeLists.txt
src/dskphone/logic/broadsoft/: CMakeLists.txt
src/dskphone/logic/commonunits/: CMakeLists.txt  backtrace.cpp  basedeletelater.cpp  basedeletelater.h  commonconfig.cpp  commonconfig.h  commonunits_def.h  commonunits_inc.h  commonunits_reboot.cpp  commonunits_reboot.h  debugfunc.cpp  debugfunc.h  deletemanager.cpp  deletemanager.h  modcommonunits.cpp  modcommonunits.h  modfileoperate.cpp  modfileoperate.h  mysystem.cpp  mysystem.h  t2xpath.h
src/dskphone/logic/contacts/: CMakeLists.txt
src/dskphone/logic/dskphonedebug/: CMakeLists.txt
src/dskphone/logic/dsskey/: CMakeLists.txt
src/dskphone/logic/dsskeyuilogic/: CMakeLists.txt
src/dskphone/logic/e911address/: CMakeLists.txt
src/dskphone/main/: CMakeLists.txt
src/dskphone/ui/: CMakeLists.txt  qtheaders.h
src/dskphone/uilogic/: CMakeLists.txt
src/dskphone/win32/: CMakeLists.txt  precompile.cpp  precompile.h  qtheaders.cpp  qtheaders.h  win32_include.cmake
src/include/: autop_msg_mk.h  config.in.h  features-define-dect.h  features-define.h  globalmodel.h  innermsgdefine.h  interfacedefine.h  keymap.h  netdatadefine.h  netmsgtypedefine.h  path_define.h  platform.h  popupboxmsgdefine.h  service_autop.h  service_cfg.h  service_dms.h  service_h323_define.h  service_h323_extension.h  service_h323_interface.h  service_h323_message.h  service_ipvp.h  service_ipvp_api.h  service_ipvp_types.h  service_sip_define.h  service_sip_interface.h  service_system.h  setting_page_define.h  singletonclassdefine.h  translateiddefine.h
src/include/common/: common_data_define.h  errordefine.h  toolmsgdefine.h  translatehelper.h
src/include/commondefine/: dsskeytypedefine.h  readme.txt  service_config.h  service_dsk_define.h  service_dsk_interface.h  service_dsk_interface_extension.h  setting_type_define.h
src/include/configiddefine/: .gitlab-ci.yml  README.md  configiddefine.h
src/include/directory/: broadsoftmessagedefine.h  dmcommon.h
src/include/extended/: bluetoothmessagedefine.h  testmodemessagedefine.h  usbmessagedefine.h  wifimessagedefine.h
src/include/idle/: idle_data_define.h  idlescreenmodelmessagedefine.h  phonestatemessagedefine.h  phonestatusmessagedefine.h  tipmessagedefine.h
src/include/setting/: setting_data_define.h
src/mocklibs/: CMakeLists.txt
src/mocklibs/ETLLib/: CMakeLists.txt  log.c  mockmkthread.cpp  mockmkthread.h  mocksub-interface.cpp  mocksub-interface.h
src/mocklibs/configparser/: mockconfigparser.cpp  mockconfigparser.h  mockconfigparsertest.cpp
src/mocklibs/devicelib/: mocknetworkserver.cpp  mocknetworkserver.h  mockphonedevice.cpp  mockphonedevice.h
src/mocklibs/etlmsghandler/: mocketlmsghandler.cpp  mocketlmsghandler.h  mocketlmsghandlertest.cpp
src/mocklibs/msgkit/: mockmkservice.cpp  mockmkservice.h
src/mocklibs/sysservice/: mockservice_system.cpp  mockservice_system.h
(+4510 files in other folders)
